(coq.theory
 (name Fampoly)                ; This will determine the toplevel
                                ; module of your theory, modules will
                                ; be MyPlugin.A, etc... when seen from
                                ; outside.


 (libraries fampoly_plugin.plugin)
 
 (modules :standard \ IdDec NoCycle))  ; Here you should declare the
                                ; dependencies on the ML plugins your
                                ; Coq files depend.

; Other important fields are `modules` and `flags`, see Dune
; documentation for more details.
 (include_subdirs qualified)